Customer Almost done
choose loan, amount DONE.
view application DONE.
bank personnel home DONE.

--- a/blnk_main/templates/blnk_main/customer.html
+++ b/blnk_main/templates/blnk_main/customer.html
@@ -4,11 +4,11 @@
   <form method="POST" action="">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Log In</legend>
+      <legend class="border-bottom mb-4">Complete Your Info</legend>
       {{ form|crispy }}
     </fieldset>
     <div class="form-group">
-      <button class="btn btn-outline-success mt-4" type="submit">Login</button>
+      <button class="btn btn-outline-success mt-4" type="submit">Submit</button>
     </div>
   </form>
 </div>
