--- a/blnk_main/templates/blnk_main/application.html
+++ b/blnk_main/templates/blnk_main/application.html
@@ -1,4 +1,4 @@
-{% extends "blnk_main/base.html" %} {% block content %}
+{% extends "blnk_main/base.html" %} {% load crispy_forms_tags %} {% block content %}
 
 <article class="media content-section">
   <div class="media-body">
@@ -9,7 +9,23 @@
       </p>
     </div>
     <p class="article-content">Interest: {{ loan.interest_rate }}%</p>
+    <a class="btn btn-outline-danger" href="{% url 'index' %}" role="button"
+      >Choose another loan</a
+    >
   </div>
 </article>
+
+<div class="content-section">
+  <form method="POST" action="">
+    {% csrf_token %}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Fill Application</legend>
+      {{ form|crispy }}
+    </fieldset>
+    <div class="form-group">
+      <button class="btn btn-outline-success mt-4" type="submit">Apply</button>
+    </div>
+  </form>
+</div>
 
 {% endblock content%}
