--- a/blnk_main/templates/blnk_main/base.html
+++ b/blnk_main/templates/blnk_main/base.html
@@ -69,13 +69,14 @@
           </div>
           <div class="col-md-4">
             <div class="content-section">
-              <h3>Our Sidebar</h3>
-              <p class='text-muted'>You can put any information here you'd like.
+              {% if user.is_authenticated %}
+                <h3> {{ user.username }} </h3>
+              {% else %}
+                <h3> Guest </h3>
+              {% endif %}
+              <p class='text-muted'>Check features below.
                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-light">Latest Posts</li>
-                  <li class="list-group-item list-group-item-light">Announcements</li>
-                  <li class="list-group-item list-group-item-light">Calendars</li>
-                  <li class="list-group-item list-group-item-light">etc</li>
+                  <a href="{% url 'myApplication' %}" class="list-group-item list-group-item-action">My Applications</a>
                 </ul>
               </p>
             </div>
