--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -8,7 +8,7 @@
       {{ form|crispy }}
     </fieldset>
     <div class="form-group">
-      <button class="btn btn-outline-info" type="submit">Sign up</button>
+      <button class="btn btn-outline-success" type="submit">Sign up</button>
     </div>
   </form>
 </div>
