--- a/blnk_main/templates/blnk_main/base.html
+++ b/blnk_main/templates/blnk_main/base.html
@@ -25,7 +25,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'index' %}">Blnk</a>
+          <a class="navbar-brand mr-4" href="{% url 'index' %}">Dashmala</a>
           <button
             class="navbar-toggler"
             type="button"
