--- a/blnk_main/templates/blnk_main/index.html
+++ b/blnk_main/templates/blnk_main/index.html
@@ -11,7 +11,7 @@
     <p class="article-content">Interest: {{ loan.interest_rate }}%</p>
     <a
       class="btn btn-outline-primary"
-      href="{% url 'application' loan.id %}"
+      href="{% url 'blnk_main:application' loan.id %}"
       role="button"
       >Apply for this loan</a
     >
