--- a/blnk_main/templates/blnk_main/application.html
+++ b/blnk_main/templates/blnk_main/application.html
@@ -1,4 +1,5 @@
-{% extends "blnk_main/base.html" %} {% load crispy_forms_tags %} {% block content %}
+{% extends "blnk_main/base.html" %} {% load crispy_forms_tags %} 
+{% block content %}
 
 <article class="media content-section">
   <div class="media-body">
@@ -9,7 +10,10 @@
       </p>
     </div>
     <p class="article-content">Interest: {{ loan.interest_rate }}%</p>
-    <a class="btn btn-outline-danger" href="{% url 'index' %}" role="button"
+    <a
+      class="btn btn-outline-danger"
+      href="{% url 'blnk_main:index' %}"
+      role="button"
       >Choose another loan</a
     >
   </div>
