--- a/blnk_main/templates/blnk_main/banker_home.html
+++ b/blnk_main/templates/blnk_main/banker_home.html
@@ -26,8 +26,65 @@
       <b>Salary:</b>
       {{ app.user.customer.salary }} EGP
     </p>
-    <button type="button" class="btn btn-outline-success">Approve</button>
-    <button type="button" class="btn btn-outline-danger">Decline</button>
+    <a
+      href="{% url 'bank_system:registerLoan' app.id %}"
+      type="button"
+      class="btn btn-outline-success"
+      >Approve</a
+    >
+    <!-- <a type="button" class="btn btn-outline-danger">Decline</a> -->
+
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn btn-outline-danger"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+    >
+      Decline
+    </button>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Attention!</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want decline this loan? it will be
+            <b>permanently deleted.</b>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <a
+              href="{% url 'bank_system:declineLoan' app.id %}"
+              type="button"
+              class="btn btn-outline-danger"
+              >Decline Loan</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </article>
 
