--- a/blnk_main/templates/blnk_main/my_app.html
+++ b/blnk_main/templates/blnk_main/my_app.html
@@ -10,7 +10,7 @@
     </div>
     <p class="article-content">Interest: {{ loan.interest_rate }}%</p>
     <p class="article-content">Amount: {{ app.amount }} EGP</p>
-    {% if app.status is True %}
+    {% if status is True %}
     <div class="alert alert-success">Approved</div>
     {% else %}
     <div class="alert alert-warning">Pending Approval</div>
