--- a/blnk_main/templates/blnk_main/banker_home.html
+++ b/blnk_main/templates/blnk_main/banker_home.html
@@ -12,7 +12,7 @@
     <p><b>Amount:</b> {{ app.amount }} EGP</p>
     <p>
       <b>Application Type:</b>
-      {{ app.app_type }}
+      {{ app.loan.loan_type }}
     </p>
     <p>
       <b>Customer Name:</b>
